2004-10-09  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(kill-syntax-forward): new function form Alex Schröder
	(kill-syntax-backward): new function form Alex Schröder

2004-10-05  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	use utf-8 as default coding system
	use flashcards

	* perso/flashcard.el:
	initial checkin

2004-09-29  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/tabbar.el:
	update to 1.3 version

	* dotemacs.el:
	(muse): make it work (find better later)
	(yh/tabbar-inhibit-function): new inhibition function for tabbar
	replace mtorus by tabbar
	(lispy): autoload
	(fracc-mode): autoload
	(crontab-mode): autoload

	* dotemacs-cust.el:
	(custom-set-variables): set tramp-default-method-alist in a better way for ftp
	(custom-set-variables): local info repository, more inhibition for tabbar
	(custom-set-faces): change inactive tabbar face

2004-09-26  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/remember-config.el:
	removed useless dependency to planner-rss

	* perso/planner-config.el:
	removed useless dependency to diary, don't load bbdb or gnus until really needed

	* perso/mycompletion.el:
	removed useless dependency to template

	* perso/mycode.el:
	removed useless dependency to cc-cmds

	* perso/emacs-wiki-config.el:
	removed useless dependency to w3m

	* perso/visual.el:
	initial checkin

	* dotemacs.el:
	(muse-mode): autoload it
	(project): properly request it
	(visual): use it
	(time-stamp): make proper use of it
	(c-mode-common-hook): autoload doxymacs
	(autoload): more autoloads
	re-enabled html configuration
	reduced loading time from 8 to 2.5 seconds. YEAH !

	* dotemacs-cust.el:
	(custom-set-variables): reuse sections for ChangeLogs
	(custom-set-variables): use JavaDoc-style doxygen
	(custom-set-faces): change default mmm-submode background
	moved visual stuff to it's own package

2004-09-22  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	add code for showing mark position

	* dotemacs-cust.el: