@@ -1,3 +1,9 @@
+2004-10-13  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotemacs.el:
+	perform debug on error
+	(sh-mode): more colors
+
 2004-10-09  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* dotemacs.el:
